Fix spacing on projects.

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -20,6 +20,11 @@ ul.projectlist {
     padding: 0pt 0pt 0pt 6pt;
     margin: 0pt;
 
+    p {
+      margin: 5pt 0pt 5pt 0pt;
+      padding: 0pt;
+    }
+
     h3 { margin: 20pt 0pt 5pt 0pt; }
 
     i { margin-top: 5pt; }
